# toronto-bike-share-analysis

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: dat2020.ipynb  endpoints.ipynb  reformat_raw.ipynb  to_path.py
scripts/: fetch_data.py  preprocessing.py  visualization.py
src/utils/: load_data.py  path.py  preprocessing.py
utils/: load_data.py  unzip.py
