[project]
name = "toronto-bike-share-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "gitpython>=3.1.45",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "requests>=2.32.4",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipykernel>=6.30.1",
    "jupyterlab>=4.4.5",
    "mypy>=1.17.1",
    "nbqa>=1.9.1",
    "notebook>=7.4.5",
    "ruff>=0.12.8",
]


[tool.setuptools.packages.find]
where = ["src"]
